[package]
name = "nest-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Nest VCS"

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
nest-crdt = { git = "https://github.com/soukadao/nest-crdt", branch = "main" }
nest-core = { git = "https://github.com/soukadao/nest-core", branch = "main" }
nest-protocol = { git = "https://github.com/soukadao/nest-protocol", branch = "main" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"
serde_json = "1"
